chore: fix deprecated use of newInstance() call