@@ -145,7 +145,7 @@ public class XSLService extends HttpServlet {
 
         try {
             String dataProviderName = ConfigUtils.getInstance().getRequiredProperty("dataProviderClass");
-            dataProvider = (DataProvider) Class.forName(dataProviderName).newInstance();
+            dataProvider = (DataProvider) Class.forName(dataProviderName).getConstructor().newInstance();
         } catch (Exception e) {
 			logger.error("Can't init servlet", e);
 			throw new ServletException(e);
